fix publish button alignment

--- a/friends.css
+++ b/friends.css
@@ -142,6 +142,10 @@
     */
      width: 320px;
 }
+#bPublish{
+  float: right;
+  margin-right: -95px;
+}
  .create-post .form-group .form-control {
      border: 1px solid #ccc;
      box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
